src/test/deca/context/valid/op_arith_float_int.deca
// Description :
// test d'opérations binaires entre des flottants et des entiers
//
// Résultats :
// ok

{
  float x;
  x = 1.0 / 1;
  x = 1.0 - 1;
  x = 1.0 * 1;
  x = 1.0 + 1;
}
